--- a/01-historia.org
+++ b/01-historia.org
@@ -12,14 +12,14 @@
 
 * O que é IA?
 
-Visões comuns aceitas sobre IA podem ser enquadradas:
+Visões comuns aceitas sobre IA podem ser enquadradas em:
 
-+ (Agir|Pensar) como humanos
-+ (Agir|Pensar) racionalmente
++ (Agir|Pensar) como humanos;
++ (Agir|Pensar) racionalmente;
 
 * Agir como humanos (Teste de Turing)
 
-+ Test de Turing (1950): definição operacional de inteligência.
++ Teste de Turing (1950): definição operacional de inteligência.
 + Para passar no teste de turing o computador precisa ter as seguintes
   habilidades:
   + Processamento de linguagem natural (NLP)
@@ -41,7 +41,7 @@ Visões comuns aceitas sobre IA podem ser enquadradas:
 
 + Aristóteles se preocupou com as leis do pensamento
   que governariam a operação da mente;
-+ IA baesada na lógica e na filosofia;
++ IA baseada na lógica e na filosofia;
 + Problemas:
   - Formalização de conhecimento informal em cenários que envolvem
     incerteza.
@@ -61,59 +61,101 @@ Visões comuns aceitas sobre IA podem ser enquadradas:
 
 * Os fundamentos de IA
 
-+ Filosofia (de 428 a.C até a atualidade)
-  + Aristóteles (384-322 a.C): sistema informal silogismos.
-  + Ramon Lull (1315): raciocínio útil como artefato mecânico.
-  + Wilhelm Shickard (1592-1615) e Blaise Pascal (1623-1662): primeiras
-    máquinas de calcular.
-  + Dualismo x Materialismo.
-  + Emprisimo: teve início na obra de Francis Bacon (1561-1626).
-+ Matemática (cerca de 800 até a atualidade)
-  + George Boole (1815-1864) e Gottlobe Frege (1848-1925):
-    formalização matemática da lógica
-  + Boole e outros discutiram algoritmos para dedução lógica
-    + David Hilbert (1862-1943): lista de 23 problemas
-    + Kurt Godel (1906-1978): teorema da incompletude
-    + Alan Turing: não-computabilidade
-  + Indecibilidade, não-computabilidade e intratabilidade
-  + Probabilidade: contribuições de Gerolamo Cardano, Pierre de
-    Fermat, Blaise Pascal e Thomas Bayes.
-+ Economia (de 1776 até a atualidade)
-  + Adam Smith (1723-1790): An inquiry into the nature and causes of
-    wealth of nations
-  + Teoria da decisão
-  + Teoria dos jogos
-  + Algumas outras...
-+ Neurociência (1861 até a atualidade)
-  + O que é neurociência?
-  + Paul Broca (1824-1880): estudo da afasia;
-  + Camilo Golgi (1843-1929) técnica de coloração de neurônios;
-  + Ramon y Cajal (1852-1934) estudos pineiros dos neurônios;
-  + Hans Berger: invenção de eletroencefalógrafo (EEG) em 1929;
-  + Cerébro e computadores digitais
-+ Psciologia (1879 até a atualidade)
-  + Origem nos trablahos de Hermann von Helmholtz e de Wilhelm Wundt (1832-1920)
-  + John Watson (1878-1958): movimento behaviorista
-  + Frederic Bartlett (1886-1969): retorno da pscicologia
-  + Kenneth Craik (1943): retorno da legitimidade de termos mentais
-  + Ciência cognitiva: início no seminário do MIT de 1956 com George
-    Miller, *Noam Chomsky*, Allen Newell e Herbert Simon.
-+ Engenharia de computadores (de 1940 até a atualidade)
-  + IA = inteligência + artefato
-  + Máquina eletrônica de Help Robinson (1940): segunda guerra mundial
-  + Z-3 (1941): primeiro computador programável, criado por Konrad
-    Zuse.
-  + ENIAC: parte de um projeto militar.
-  + Dívida da IA com a área de software e vice-versa.
-+ Linguística (de 1957 até atualidade)
-  + B.F. Skinner (1957): Verbal behavior
-  + Noam Chomsky: Syntactic structures
-  + A linguística e a IA "nasceram" aproximadamente na mesmo época
-  + A compreensão da linguagem se mostrou mais complexos do que
-    parecia (1957)
+** Filosofia (de 428 a.C até a atualidade)
 
-** Tipos de problemas
++ Aristóteles (384-322 a.C): sistema informal silogismos.
++ Ramon Lull (1315): raciocínio útil como artefato mecânico.
++ Wilhelm Shickard (1592-1615) e Blaise Pascal (1623-1662): primeiras
+  máquinas de calcular.
++ Dualismo x Materialismo.
++ Emprisimo: teve início na obra de Francis Bacon (1561-1626).
 
-+ Problemas não-computáveis (nem o valor dá pra pegar)
-+ Problemas indecidíveis (halting problem)
-+ Problemas intratáveis (NP)
+** Matemática (cerca de 800 até a atualidade)
+
++ George Boole (1815-1864) e Gottlobe Frege (1848-1925):
+  formalização matemática da lógica
++ Boole e outros discutiram algoritmos para dedução lógica
+  + David Hilbert (1862-1943): lista de 23 problemas
+  + Kurt Godel (1906-1978): teorema da incompletude
+  + Alan Turing: não-computabilidade
++ Indecibilidade, não-computabilidade e intratabilidade [fn:1]
++ Probabilidade: contribuições de Gerolamo Cardano, Pierre de
+  Fermat, Blaise Pascal e Thomas Bayes.
+
+[fn:1]: Problemas não-computáveis nem o valor dá pra pegar; problemas
+indecidíveis não sabem quando parar; problemas intratáveis não podem
+rodar em tempo determinístico polinomial numa maquina de turing.
+
+
+** Economia (de 1776 até a atualidade)
+
++ Adam Smith (1723-1790): An inquiry into the nature and causes of
+  wealth of nations
++ Teoria da decisão
++ Teoria dos jogos
++ Algumas outras...
+
+** Neurociência (1861 até a atualidade)
+
++ O que é neurociência?
++ Paul Broca (1824-1880): estudo da afasia;
++ Camilo Golgi (1843-1929) técnica de coloração de neurônios;
++ Ramon y Cajal (1852-1934) estudos pineiros dos neurônios;
++ Hans Berger: invenção de eletroencefalógrafo (EEG) em 1929;
++ Cerébro e computadores digitais
+
+** Psciologia (1879 até a atualidade)
+
++ Origem nos trablahos de Hermann von Helmholtz e de Wilhelm Wundt (1832-1920)
++ John Watson (1878-1958): movimento behaviorista
++ Frederic Bartlett (1886-1969): retorno da pscicologia
++ Kenneth Craik (1943): retorno da legitimidade de termos mentais
++ Ciência cognitiva: início no seminário do MIT de 1956 com George
+  Miller, *Noam Chomsky*, Allen Newell e Herbert Simon.
+
+** Engenharia de computadores (de 1940 até a atualidade)
+
++ IA = inteligência + artefato
++ Máquina eletrônica de Help Robinson (1940): segunda guerra mundial
++ Z-3 (1941): primeiro computador programável, criado por Konrad
+  Zuse.
++ ENIAC: parte de um projeto militar.
++ Dívida da IA com a área de software e vice-versa.
+
+** Linguística (de 1957 até atualidade)
++ B.F. Skinner (1957): Verbal behavior
++ Noam Chomsky: Syntactic structures
++ A linguística e a IA "nasceram" aproximadamente na mesmo época
++ A compreensão da linguagem se mostrou mais complexos do que
+  parecia (1957)
+
+* Linha do Tempo
+
++ *1943*: MCCulloch & Pitts: modeo de neurônio artificial
++ *1949*: Hebb: aprendizado para modificar pesos de conexões entre
+  neurônios
++ *1956*: Workshop em Dartmouth: surge o nome IA
++ *1952-1969*: Primeiros programas de IA, LISP, time sharing,  Adalines,
+  (Widrow, 1960), Percepetrons (Rosenblatt, 1962)
++ *1966-1973*: Complexidade, computacional evidenciou dificuldade para
+  se resolver alguns problemas; pesquisas em RNs quase desparecem.
++ *1969-1979*: Sistemas baseados em conhecimento:
+  + Programa DENDRAL
+  + Programa MYCYN (infecções sanguíneas)
++ *1980 em diante*: IA se torna uma indústria
++ *1986*: pesquisas em RNs são retornadas
++ *1987 em diante*: IA se torna ciência:
+  + Melhorar refinar teorias existentes
+  + Provas matemáticas / sólida evidência experimental (estatística)
+  + Resolver problemas reais em vez de /toy problems/
+  + Várias aplicações
++ *1995 em diante*: O surgimento de agentes inteligentes
++ *2001 em diante*: Disponibilidade de conjuntos de dados muito grandes.
+
+Notas:
+- AI Winter
+- Perceptrons somente podem ser usados para problemas linearmente
+  separáveis
+- Backpropagation resolveu o problema 1980
+- O avanço do hardware pós-2000 tornou o uso e treinamento de redes
+  neurais mais sofisticadas com mais eficiência.
