--- a/README.org
+++ b/README.org
@@ -23,3 +23,7 @@ Aqui você encontrará as minhas principais notas das disciplina de IC.
 * História
 
 #+INCLUDE: 01-historia.org :lines "10-" :minlevel 2
+
+* Busca
+
+#+INCLUDE: 02-busca.org :lines "10-" :minlevel 2
